[package]
name = "jsongrep"
version = "0.2.0"
authors = ["berquerant"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/berquerant/jsongrep"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
thiserror = "1.0"
once_cell = "0.2.4"
regex = "1"